--- a/master/src/assets/styles/Main.scss
+++ b/master/src/assets/styles/Main.scss
@@ -11,6 +11,17 @@
     background-color: #1a1a1a;
     overflow: hidden;
 
+    @media (max-width: 1024px) {
+        padding: 0px 10% 120px;
+        min-height: 600px;
+    }
+
+    @media (max-width: 480px) {
+        padding: 80px 5% 80px;
+        min-height: auto;
+        gap: 20px;
+    }
+
     &::after {
         content: '';
         position: absolute;
@@ -56,12 +67,28 @@
         font-size: 1.5em;
         margin-block-start: 0px;
         margin-block-end: 0px;
+
+        @media (max-width: 768px) {
+            font-size: 1.2em;
+        }
+
+        @media (max-width: 480px) {
+            font-size: 1em;
+        }
     }
 
     h1 {
         font-size: 5em;
         margin-block-start: 0px;
         margin-block-end: 0px;
+
+        @media (max-width: 1024px) {
+            font-size: 4em;
+        }
+
+        @media (max-width: 480px) {
+            font-size: 2.5em;
+        }
     }
 }
 
@@ -150,10 +177,11 @@
         }
 
         .about-section {
-            padding-top: 150px;
+            padding-top: 100px;
             display: block;
             padding-left: 0px;
             padding-right: 0px;
+            padding-bottom: 80px;
         }
 
         .about-section .content {
@@ -166,6 +194,16 @@
         .about-section .image-wrapper {
             padding-left: 5%;
             width: 100%;
+            
+            img {
+                width: 120px !important;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .about-section .image-wrapper img {
+                width: 100px !important;
+            }
         }
     }
 }
