--- a/master/src/assets/styles/Project.scss
+++ b/master/src/assets/styles/Project.scss
@@ -15,6 +15,14 @@
     position: relative;
     padding-bottom: 2rem;
 
+    @media (max-width: 768px) {
+        padding: 0 1.5rem;
+    }
+
+    @media (max-width: 480px) {
+        padding: 0 0.5rem;
+    }
+
     &::after {
         content: '';
         position: absolute;
@@ -324,8 +332,8 @@
             }
 
             @media (max-width: 440px) {
-                left: -10rem;
-                margin-right: -7rem;
+                left: 0;
+                margin-right: 0;
             }
         }
     }
@@ -394,8 +402,8 @@
             }
 
             @media (max-width: 440px) {
-                right: -10rem;
-                margin-left: -7rem;
+                right: 0;
+                margin-left: 0;
             }
         }
     }
